syntax = "proto3";

package userservice;

option go_package = "./proto;userservice";

service UserService {
	rpc Register(UserRegistryRequest) returns (UserRegistryResponse);
	rpc Login(UserLoginRequest) returns (UserLoginResponse);
}

message UserRegistryRequest{
	// @inject_tag: binding:"required"
	string username = 1;
	// @inject_tag: binding:"required"
	string password = 2;
	string email = 3;
}

message UserRegistryResponse{
	string msg = 1;
}
message UserLoginRequest{
	string username = 1;
	string password = 2;
}
message UserLoginResponse{
	string msg = 1;
	string token = 2;
}



